--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+#root, body {
   margin: 0;
+}
+
+#root {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  --border-radius: 8px;
 }
 
 h1 {
